--- a/app/src/main/res/layout/activity_privacy_policy.xml
+++ b/app/src/main/res/layout/activity_privacy_policy.xml
@@ -11,7 +11,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Privacy Policy for Oho!"
+        android:text="Privacy Policy"
         android:fontFamily="@font/ptsans_bold"
         android:textColor="@color/black"
         android:textSize="@dimen/_25ssp"
