--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -26,7 +26,7 @@
         <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/_70sdp"
+            android:layout_marginBottom="@dimen/_40sdp"
             android:paddingStart="@dimen/_20sdp"
             android:paddingEnd="@dimen/_20sdp">
 
@@ -42,7 +42,7 @@
                     android:fontFamily="@font/ptsans_bold"
                     android:text="Dine in"
                     android:textColor="@color/black"
-                    android:textSize="@dimen/_16ssp" />
+                    android:textSize="@dimen/_18ssp" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -53,7 +53,7 @@
                     android:fontFamily="@font/ptsans_regular"
                     android:text="with your"
                     android:textColor="@color/black"
-                    android:textSize="@dimen/_16ssp" />
+                    android:textSize="@dimen/_18ssp" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -62,7 +62,7 @@
                     android:fontFamily="@font/ptsans_bold"
                     android:text="Perfect Date"
                     android:textColor="@color/black"
-                    android:textSize="@dimen/_16ssp" />
+                    android:textSize="@dimen/_18ssp" />
             </LinearLayout>
 
             <ImageView
@@ -75,11 +75,23 @@
 
         </RelativeLayout>
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:fontFamily="@font/darkergrotesque_regular"
+            android:text="We partner with local cafés and restaurants to bring amazing dining experience while you get to meet your potential partner in a safe environment."
+            android:textColor="@color/black"
+            android:textSize="@dimen/_16ssp"
+            android:paddingStart="@dimen/_20sdp"
+            android:paddingEnd="@dimen/_20sdp"
+            android:layout_marginBottom="@dimen/_40sdp"/>
+
         <LinearLayout
             android:id="@+id/button_signin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/_20sdp"
+            android:layout_marginBottom="@dimen/_25sdp"
             android:background="@drawable/border_rounded_corner"
             android:clickable="true"
             android:focusable="true"
@@ -134,7 +146,7 @@
                 android:fontFamily="@font/sf_pro_rounded_regular"
                 android:text="Terms"
                 android:textColor="@color/black"
-                android:textSize="@dimen/_14ssp"
+                android:textSize="@dimen/_16ssp"
                 android:textStyle="bold" />
 
             <TextView
@@ -158,7 +170,7 @@
                 android:fontFamily="@font/ptsans_regular"
                 android:text="Privacy Policy"
                 android:textColor="@color/black"
-                android:textSize="@dimen/_14ssp"
+                android:textSize="@dimen/_16ssp"
                 android:textStyle="bold" />
         </LinearLayout>
 
