--- a/app/src/main/res/layout/notification_expanded.xml
+++ b/app/src/main/res/layout/notification_expanded.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginTop="@dimen/_5sdp"
+    android:layout_marginBottom="@dimen/_5sdp">
 
     <ImageView
         android:id="@+id/imageview_notification_sender"
         android:layout_width="0dp"
-        android:layout_height="match_parent"
+        android:layout_height="@dimen/_50sdp"
         android:layout_weight="1"
         android:layout_marginEnd="@dimen/_5sdp"
-        android:scaleType="centerCrop"
-        android:src="@drawable/avatar_female" />
+        android:layout_marginTop="@dimen/_3sdp"
+        android:scaleType="centerCrop" />
 
     <LinearLayout
         android:id="@+id/layout_notification"
