feat: write funtion for DOB picker, height picker and location picker in profile setup screens

--- a/app/src/main/res/layout/date_input_dialog.xml
+++ b/app/src/main/res/layout/date_input_dialog.xml
@@ -11,7 +11,7 @@
         android:id="@+id/datepicker"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:calendarViewShown="false"
-        android:datePickerMode="spinner"
-        android:theme="@style/MyDatePicker"/>
+        android:calendarViewShown="true"
+        android:datePickerMode="calendar"
+        android:theme="@style/MyDatePickerDialogTheme" />
 </LinearLayout>
