--- a/app/src/main/res/layout/fragment_second_profile_setup.xml
+++ b/app/src/main/res/layout/fragment_second_profile_setup.xml
@@ -121,7 +121,7 @@
         android:textSize="@dimen/_16ssp" />
 
     <TextView
-        android:id="@+id/textview_date_of_birth"
+        android:id="@+id/textview_height"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_20sdp"
