--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -80,6 +80,20 @@
         <item name="android:font">@font/ptsans_regular</item>
     </style>
 
+    <style name="MyDatePickerDialogTheme" parent="android:Theme.Material.Light.Dialog">
+        <item name="android:datePickerStyle">@style/MyDatePickerStyle</item>
+        <item name="android:textColorPrimaryInverse">#000</item> <!-- header date, month color && calendar text highlight color -->
+        <item name="android:textColorSecondaryInverse">@color/ted_image_picker_primary_pressed</item> <!-- header year color -->
+        <item name="android:textSize">@dimen/_20ssp</item>
+        <item name="fontFamily">@font/ptsans_regular</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:colorAccent">@color/ted_image_picker_primary_pressed</item> <!-- button color -->
+    </style>
+
+    <style name="MyDatePickerStyle" parent="@android:style/Widget.Material.Light.DatePicker">
+        <item name="android:headerBackground">#fff</item> <!-- header background color -->
+    </style>
+
     <style name="roundedCornersImageView" parent="">
         <item name="cornerFamily">rounded</item>
         <item name="cornerSize">@dimen/_20sdp</item>
