feat: add screen for ethnicity & phone number input
feat: add screen for selecting prompts

--- a/app/src/main/res/layout/row_prompt_questions.xml
+++ b/app/src/main/res/layout/row_prompt_questions.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:app="http://schemas.android.com/apk/res-auto"
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/text_prompt_question"
-    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:text="Whiskey or Wine?"
-    android:fontFamily="@font/ptsans_regular"
-    android:textSize="@dimen/_14ssp"
-    android:textColor="@color/textSubTitle"
-    android:padding="@dimen/_10sdp"
     android:layout_marginBottom="@dimen/_5sdp"
+    android:background="@drawable/border_drawable"
     android:clickable="true"
     android:focusable="true"
-    android:background="@drawable/border_drawable"
-    app:drawableEndCompat="@drawable/ic_arrow_right" />
+    android:fontFamily="@font/ptsans_regular"
+    android:padding="@dimen/_10sdp"
+    android:text="Whiskey or Wine?"
+    android:textColor="@color/black"
+    android:textSize="@dimen/_14ssp"
+    app:drawableEndCompat="@drawable/ic_arrow_right"
+    android:tag="notselected"/>
