--- a/app/src/main/res/drawable/border_gradient_drawable.xml
+++ b/app/src/main/res/drawable/border_gradient_drawable.xml
@@ -2,6 +2,6 @@
     android:shape="rectangle">
     <stroke
         android:width="1dip"
-        android:color="#E6E6E6" />
+        android:color="#B42254" />
 </shape>
 
