--- a/app/src/main/res/layout/fragment_sixth_profile_setup.xml
+++ b/app/src/main/res/layout/fragment_sixth_profile_setup.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     tools:context=".views.registration.SixthProfileSetup">
 
@@ -14,19 +14,27 @@
         android:fontFamily="@font/ptsans_bold"
         android:text="Your prompt answers.."
         android:textColor="@color/black"
-        android:textSize="@dimen/_16ssp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true" />
+        android:textSize="@dimen/_16ssp" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerview_input_prompt"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="@dimen/_20sdp"
-        android:layout_marginBottom="@dimen/_20sdp"
+    <TextView
+        android:id="@+id/text_prompt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_below="@id/text_title"
-        android:layout_above="@id/button_next_sixth"/>
+        android:fontFamily="@font/darkergrotesque_medium"
+        android:text="Enter your answer for the selected prompt, pick a photo and write a caption for it."
+        android:textColor="@color/black"
+        android:textSize="@dimen/_16ssp"
+        android:layout_marginTop="@dimen/_10sdp" />
 
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/viewpager"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/text_prompt"
+        android:layout_above="@id/button_next_sixth"
+        android:layout_marginTop="@dimen/_20sdp"
+        android:layout_marginBottom="@dimen/_20sdp"/>
     <TextView
         android:id="@+id/button_next_sixth"
         android:layout_width="@dimen/_100sdp"
