--- a/app/src/main/res/layout/fragment_sevent_profile_setup.xml
+++ b/app/src/main/res/layout/fragment_sevent_profile_setup.xml
@@ -80,6 +80,7 @@
         android:fontFamily="@font/ptsans_bold"
         android:text="Select a profile photo.."
         android:textColor="@color/black"
+        android:layout_marginBottom="@dimen/_20sdp"
         android:textSize="@dimen/_16ssp" />
 
     <ImageView
@@ -93,6 +94,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
+        android:layout_marginTop="@dimen/_20sdp"
         android:layout_marginBottom="@dimen/_10sdp"
         android:fontFamily="@font/darkergrotesque_medium"
         android:text="Tap to select photo"
