--- a/app/src/main/res/layout/row_anser_prompt.xml
+++ b/app/src/main/res/layout/row_anser_prompt.xml
@@ -44,7 +44,9 @@
             android:layout_height="@dimen/_150sdp"
             android:layout_gravity="center_horizontal"
             android:layout_weight="1"
-            android:src="@drawable/add_photo" />
+            android:src="@drawable/add_photo"
+            android:layout_marginTop="@dimen/_20sdp"
+            android:layout_marginBottom="@dimen/_20sdp"/>
 
         <TextView
             android:layout_width="wrap_content"
