--- a/app/src/main/res/layout/fragment_fifth_profile_setup.xml
+++ b/app/src/main/res/layout/fragment_fifth_profile_setup.xml
@@ -26,8 +26,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/ptsans_bold"
-            android:text="0/3"
-            android:textColor="@color/black"
+            android:text="0/6"
+            android:textColor="@color/ted_image_picker_primary_pressed"
             android:textSize="@dimen/_16ssp"
             android:layout_alignParentEnd="true"/>
     </RelativeLayout>
