feat: add icons to profile meta infos in Profile Screen

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -107,8 +107,7 @@
                 android:fontFamily="@font/darkergrotesque_bold"
                 android:text="Sign in with Google"
                 android:textColor="@color/white"
-                android:textSize="@dimen/_18ssp"
-                android:textStyle="bold" />
+                android:textSize="@dimen/_18ssp" />
         </LinearLayout>
 
         <TextView
