--- a/app/src/main/res/layout/row_info_profile.xml
+++ b/app/src/main/res/layout/row_info_profile.xml
@@ -1,168 +1,166 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <RelativeLayout
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/profile_image_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_10sdp">
+        android:layout_height="@dimen/_200sdp"
+        android:layout_gravity="center"
+        android:layout_marginTop="@dimen/_20sdp"
+        android:clickable="true"
+        android:focusable="true"
+        android:src="@drawable/profile_photo_placeholder"
+        app:civ_border_color="#E6E6E6"
+        app:civ_border_overlay="true"
+        app:civ_border_width="@dimen/_5sdp" />
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/_200sdp"
-            android:layout_centerInParent="true"
-            android:background="@drawable/gradient_ring" />
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/profile_image_view"
-            android:layout_width="@dimen/_150sdp"
-            android:layout_height="@dimen/_150sdp"
-            android:layout_centerInParent="true"
-            android:layout_marginStart="@dimen/_20sdp"
-            android:layout_marginEnd="@dimen/_20sdp"
-            android:clickable="true"
-            android:focusable="true"
-            android:padding="@dimen/_1sdp"
-            android:src="@drawable/profile_photo_placeholder" />
-    </RelativeLayout>
-
-    <RelativeLayout
+    <TextView
+        android:id="@+id/name_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/_20sdp"
+        android:fontFamily="@font/ptsans_bold"
         android:paddingStart="@dimen/_20sdp"
-        android:paddingEnd="@dimen/_20sdp">
+        android:paddingEnd="@dimen/_20sdp"
+        android:text="Jane Doe"
+        android:textColor="@color/black"
+        android:textSize="@dimen/_20ssp" />
 
-        <TextView
-            android:id="@+id/name_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_marginEnd="@dimen/_20sdp"
-            android:layout_toStartOf="@id/textview_distance"
-            android:fontFamily="@font/ptsans_bold"
-            android:text="Jane Doe"
-            android:textColor="@color/black"
-            android:textSize="@dimen/_20ssp" />
+    <TextView
+        android:id="@+id/textview_location"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:drawableStart="@drawable/ic_location_24"
+        android:drawablePadding="@dimen/_5sdp"
+        android:drawableTint="@color/black"
+        android:fontFamily="@font/darkergrotesque_regular"
+        android:text="Sunnyvale, CA"
+        android:textColor="@color/black"
+        android:textSize="@dimen/_16ssp"
+        android:paddingStart="@dimen/_20sdp"
+        android:paddingEnd="@dimen/_20sdp"
+        android:layout_marginTop="@dimen/_10sdp"/>
 
-        <TextView
-            android:id="@+id/textview_distance"
-            app:drawableStartCompat="@drawable/ic_location_24"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:background="@drawable/rounded_corner_drawable"
-            android:fontFamily="@font/ptsans_bold"
-            android:gravity="center_vertical"
-            android:text="2 km"
-            android:textColor="@color/indicatioractive"
-            android:textSize="@dimen/_14ssp" />
-    </RelativeLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/textview_profession"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_5sdp"
+        android:drawableStart="@drawable/ic_profession"
+        android:drawablePadding="@dimen/_5sdp"
+        android:fontFamily="@font/darkergrotesque_regular"
         android:paddingStart="@dimen/_20sdp"
-        android:paddingEnd="@dimen/_20sdp">
-
-        <TextView
-            android:id="@+id/textview_location"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/darkergrotesque_semibold"
-            android:text="Sunnyvale, CA"
-            android:textColor="@color/textSubTitle"
-            android:textSize="@dimen/_16ssp"
-            android:layout_alignParentStart="true"
-            android:layout_toStartOf="@id/textview_profession"/>
-
-        <TextView
-            android:id="@+id/textview_profession"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:textAlignment="textEnd"
-            android:fontFamily="@font/darkergrotesque_semibold"
-            android:text="Product Designer"
-            android:textColor="@color/textSubTitle"
-            android:textSize="@dimen/_16ssp" />
-    </LinearLayout>
+        android:paddingEnd="@dimen/_20sdp"
+        android:text="Product Designer"
+        android:textColor="@color/black"
+        android:textSize="@dimen/_16ssp" />
 
     <TableLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_10sdp"
+        android:layout_marginTop="@dimen/_20sdp"
         android:paddingStart="@dimen/_20sdp"
         android:paddingEnd="@dimen/_20sdp"
         android:stretchColumns="*">
 
-        <TableRow>
+        <TableRow
+            android:layout_marginTop="@dimen/_5sdp">
 
             <TextView
                 android:id="@+id/textview_gender"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:background="@drawable/border_drawable"
-                android:fontFamily="@font/ptsans_regular"
-                android:gravity="center"
-                android:padding="@dimen/_5sdp"
+                android:drawableStart="@drawable/ic_gender"
+                android:drawablePadding="@dimen/_5sdp"
+                android:fontFamily="@font/darkergrotesque_regular"
                 android:text="Female"
-                android:textColor="@color/textSubTitle"
-                android:textSize="@dimen/_14ssp" />
+                android:textColor="@color/black"
+                android:textSize="@dimen/_16ssp" />
 
             <TextView
                 android:id="@+id/textview_height"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:background="@drawable/border_drawable"
-                android:fontFamily="@font/ptsans_regular"
-                android:gravity="center"
-                android:padding="@dimen/_5sdp"
+                android:drawableStart="@drawable/ic_height"
+                android:drawablePadding="@dimen/_5sdp"
+                android:fontFamily="@font/darkergrotesque_regular"
                 android:text="@string/dummy_height"
-                android:textColor="@color/textSubTitle"
-                android:textSize="@dimen/_14ssp" />
+                android:textColor="@color/black"
+                android:textSize="@dimen/_16ssp" />
+
+        </TableRow>
+
+        <TableRow
+            android:layout_marginTop="@dimen/_5sdp">
 
             <TextView
                 android:id="@+id/textview_race"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:background="@drawable/border_drawable"
-                android:fontFamily="@font/ptsans_regular"
-                android:gravity="center"
-                android:padding="@dimen/_5sdp"
+                android:drawableStart="@drawable/ic_race"
+                android:drawablePadding="@dimen/_5sdp"
+                android:fontFamily="@font/darkergrotesque_regular"
                 android:text="Asian"
-                android:textColor="@color/textSubTitle"
-                android:textSize="@dimen/_14ssp" />
+                android:textColor="@color/black"
+                android:textSize="@dimen/_16ssp" />
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:src="@drawable/ic_religion"
+                    android:layout_marginEnd="@dimen/_5sdp"/>
+
+                <TextView
+                    android:id="@+id/textview_religion"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:drawablePadding="@dimen/_5sdp"
+                    android:fontFamily="@font/darkergrotesque_regular"
+                    android:text="Agnostic"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/_16ssp" />
+            </LinearLayout>
+
+
+        </TableRow>
+
+        <TableRow
+            android:layout_marginTop="@dimen/_5sdp">
 
             <TextView
-                android:id="@+id/textview_religion"
+                android:id="@+id/textview_education"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:background="@drawable/border_drawable"
-                android:fontFamily="@font/ptsans_regular"
-                android:gravity="center"
-                android:padding="@dimen/_5sdp"
-                android:text="Agnostic"
-                android:textColor="@color/textSubTitle"
-                android:textSize="@dimen/_14ssp" />
+                android:drawableStart="@drawable/ic_education"
+                android:drawablePadding="@dimen/_5sdp"
+                android:fontFamily="@font/darkergrotesque_regular"
+                android:text="Phd"
+                android:textColor="@color/black"
+                android:textSize="@dimen/_16ssp" />
+
         </TableRow>
     </TableLayout>
 
-    <TableLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_5sdp"
-        android:paddingStart="@dimen/_20sdp"
-        android:paddingEnd="@dimen/_20sdp"
-        android:stretchColumns="*">
-
-    </TableLayout>
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/_20sdp"
+        android:layout_below="@id/text_slogan"
+        android:layout_marginStart="@dimen/_20sdp"
+        android:layout_marginTop="@dimen/_10sdp"
+        android:layout_marginEnd="@dimen/_20sdp"
+        android:background="@drawable/zigzag" />
 
     <TextView
         android:layout_width="match_parent"
@@ -185,7 +183,7 @@
         android:paddingStart="@dimen/_20sdp"
         android:paddingEnd="@dimen/_20sdp"
         android:text="@string/lorem_ipsum_2"
-        android:textColor="@color/textSubTitle"
+        android:textColor="@color/black"
         android:textSize="@dimen/_14ssp" />
 
     <TextView
