--- a/app/src/main/res/layout/row_info_profile.xml
+++ b/app/src/main/res/layout/row_info_profile.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
@@ -19,35 +18,48 @@
         app:civ_border_overlay="true"
         app:civ_border_width="@dimen/_5sdp" />
 
-
-    <TextView
-        android:id="@+id/name_text"
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_20sdp"
-        android:fontFamily="@font/ptsans_bold"
         android:paddingStart="@dimen/_20sdp"
-        android:paddingEnd="@dimen/_20sdp"
-        android:text="Jane Doe"
-        android:textColor="@color/black"
-        android:textSize="@dimen/_20ssp" />
+        android:paddingEnd="@dimen/_20sdp">
+
+        <TextView
+            android:id="@+id/name_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_toStartOf="@id/button_edit_basic_info"
+            android:fontFamily="@font/ptsans_bold"
+            android:text="Jane Doe"
+            android:textColor="@color/black"
+            android:textSize="@dimen/_22ssp" />
+
+        <ImageView
+            android:id="@+id/button_edit_basic_info"
+            android:layout_width="@dimen/_24sdp"
+            android:layout_height="@dimen/_24sdp"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="@dimen/_5sdp"
+            android:src="@drawable/ic_edit_profile" />
+
+    </RelativeLayout>
 
     <TextView
         android:id="@+id/textview_location"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_marginTop="@dimen/_10sdp"
         android:drawableStart="@drawable/ic_location_24"
         android:drawablePadding="@dimen/_5sdp"
         android:drawableTint="@color/black"
         android:fontFamily="@font/darkergrotesque_regular"
-        android:text="Sunnyvale, CA"
-        android:textColor="@color/black"
-        android:textSize="@dimen/_16ssp"
         android:paddingStart="@dimen/_20sdp"
         android:paddingEnd="@dimen/_20sdp"
-        android:layout_marginTop="@dimen/_10sdp"/>
-
+        android:text="Sunnyvale, CA"
+        android:textColor="@color/black"
+        android:textSize="@dimen/_16ssp" />
 
     <TextView
         android:id="@+id/textview_profession"
@@ -63,21 +75,23 @@
         android:textColor="@color/black"
         android:textSize="@dimen/_16ssp" />
 
-    <TableLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_20sdp"
-        android:paddingStart="@dimen/_20sdp"
-        android:paddingEnd="@dimen/_20sdp"
-        android:stretchColumns="*">
+        android:layout_marginStart="@dimen/_20sdp"
+        android:layout_marginEnd="@dimen/_20sdp"
+        android:orientation="vertical"
+        android:layout_marginTop="@dimen/_20sdp">
 
-        <TableRow
-            android:layout_marginTop="@dimen/_5sdp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
             <TextView
                 android:id="@+id/textview_gender"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:drawableStart="@drawable/ic_gender"
                 android:drawablePadding="@dimen/_5sdp"
                 android:fontFamily="@font/darkergrotesque_regular"
@@ -89,22 +103,25 @@
                 android:id="@+id/textview_height"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:drawableStart="@drawable/ic_height"
                 android:drawablePadding="@dimen/_5sdp"
                 android:fontFamily="@font/darkergrotesque_regular"
                 android:text="@string/dummy_height"
                 android:textColor="@color/black"
                 android:textSize="@dimen/_16ssp" />
+        </LinearLayout>
 
-        </TableRow>
-
-        <TableRow
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_5sdp">
 
             <TextView
                 android:id="@+id/textview_race"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:drawableStart="@drawable/ic_race"
                 android:drawablePadding="@dimen/_5sdp"
                 android:fontFamily="@font/darkergrotesque_regular"
@@ -114,44 +131,40 @@
 
             <LinearLayout
                 android:layout_width="0dp"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_weight="1">
 
                 <ImageView
                     android:layout_width="24dp"
                     android:layout_height="24dp"
-                    android:src="@drawable/ic_religion"
-                    android:layout_marginEnd="@dimen/_5sdp"/>
+                    android:src="@drawable/ic_religion" />
 
                 <TextView
                     android:id="@+id/textview_religion"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_5sdp"
                     android:drawablePadding="@dimen/_5sdp"
                     android:fontFamily="@font/darkergrotesque_regular"
                     android:text="Agnostic"
                     android:textColor="@color/black"
                     android:textSize="@dimen/_16ssp" />
             </LinearLayout>
+        </LinearLayout>
 
+        <TextView
+            android:id="@+id/textview_education"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_5sdp"
+            android:drawableStart="@drawable/ic_education"
+            android:drawablePadding="@dimen/_5sdp"
+            android:fontFamily="@font/darkergrotesque_regular"
+            android:text="Phd"
+            android:textColor="@color/black"
+            android:textSize="@dimen/_16ssp" />
 
-        </TableRow>
-
-        <TableRow
-            android:layout_marginTop="@dimen/_5sdp">
-
-            <TextView
-                android:id="@+id/textview_education"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:drawableStart="@drawable/ic_education"
-                android:drawablePadding="@dimen/_5sdp"
-                android:fontFamily="@font/darkergrotesque_regular"
-                android:text="Phd"
-                android:textColor="@color/black"
-                android:textSize="@dimen/_16ssp" />
-
-        </TableRow>
-    </TableLayout>
+    </LinearLayout>
 
     <ImageView
         android:layout_width="match_parent"
@@ -162,38 +175,67 @@
         android:layout_marginEnd="@dimen/_20sdp"
         android:background="@drawable/zigzag" />
 
-    <TextView
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_20sdp"
-        android:fontFamily="@font/darkergrotesque_bold"
         android:paddingStart="@dimen/_20sdp"
-        android:paddingEnd="@dimen/_20sdp"
-        android:text="About"
-        android:textColor="@color/black"
-        android:textSize="@dimen/_18ssp" />
+        android:paddingEnd="@dimen/_20sdp">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/ptsans_bold"
+            android:text="About"
+            android:textColor="@color/black"
+            android:textSize="@dimen/_16ssp" />
+
+        <ImageView
+            android:id="@+id/button_edit_bio"
+            android:layout_width="@dimen/_24sdp"
+            android:layout_height="@dimen/_24sdp"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="@dimen/_5sdp"
+            android:src="@drawable/ic_edit_profile" />
+    </RelativeLayout>
 
     <TextView
         android:id="@+id/textview_about"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_5sdp"
-        android:fontFamily="@font/ptsans_regular"
+        android:fontFamily="@font/darkergrotesque_medium"
         android:justificationMode="inter_word"
         android:paddingStart="@dimen/_20sdp"
         android:paddingEnd="@dimen/_20sdp"
         android:text="@string/lorem_ipsum_2"
         android:textColor="@color/black"
-        android:textSize="@dimen/_14ssp" />
+        android:textSize="@dimen/_16ssp" />
 
-    <TextView
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_20sdp"
-        android:fontFamily="@font/darkergrotesque_bold"
         android:paddingStart="@dimen/_20sdp"
-        android:paddingEnd="@dimen/_20sdp"
-        android:text="Prompts &amp; Photos"
-        android:textColor="@color/black"
-        android:textSize="@dimen/_18ssp" />
+        android:paddingEnd="@dimen/_20sdp">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:fontFamily="@font/ptsans_bold"
+            android:text="Prompts &amp; Photos"
+            android:textColor="@color/black"
+            android:textSize="@dimen/_16ssp" />
+
+        <ImageView
+            android:id="@+id/button_edit_prompts"
+            android:layout_width="@dimen/_24sdp"
+            android:layout_height="@dimen/_24sdp"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="@dimen/_5sdp"
+            android:src="@drawable/ic_edit_profile" />
+
+    </RelativeLayout>
+
 </LinearLayout>
